Support importing 3-rd party libraries